<resources>
    <string name="app_name">Moviedom</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="popular_people">Popular People</string>
    <string name="contact">Contact Developer</string>
    <string name="release_date">Release Date:</string>
    <string name="dash">--</string>
    <string name="revenue">Revenue:</string>
    <string name="budget">Budget:</string>
    <string name="produced_by">Produced by:</string>
    <string name="trailers">Trailers</string>
    <string name="as">as </string>
    <string name="similar_movies">Similar Movies</string>
    <string name="view_all">View All</string>
    <string name="transition_photo">transitionPhoto</string>
    <string name="similar_transition_photo">SimilarTransitionPhoto</string>
    <string name="no_result_found">No Result Found</string>
    <string name="for_more_information_contact_us">For more information or any suggestion contact us</string>
    <string name="email">Email:</string>
    <string name="my_email">chahat.jain0@gmail.com</string>
    <string name="contact_us">Contact us</string>
    <string name="born">Born:</string>
    <string name="birthplace">Birthplace:</string>
    <string name="images">Images</string>
    <string name="people_movies_transition_photo">PeopleMoviesTransitionPhoto</string>
    <string name="first_air_date">First Air Date:</string>
    <string name="last_air_date">Last Air Date:</string>
    <string name="networks">Networks:</string>
    <string name="created_by">Created By:</string>
    <string name="show_type">Show Type:</string>
    <string name="show_status">Show Status:</string>
    <string name="similar_tv_shows">Similar TV Shows</string>
    <string name="full_image_transition">FullImageTransition</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="banner_ad_unit_id">ca-app-pub-5219736083818079/8300089984</string>
    <string name="permission_required">Permission required to download</string>
    <string name="search_hint">Search</string>
    <string name="sentiment_icon">sentiment_icon</string>
    <string name="oops_something_went_wrong">Oops...Someting went wrong</string>
    <string name="please_try_again">Please, try again</string>
</resources>
