<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_movie_black_24dp"
            android:title="@string/movies" />
        <item
            android:id="@+id/nav_tv_shows"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/tv_shows" />
        <item
            android:id="@+id/nav_popular_people"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/popular_people" />
    </group>

    <group android:checkableBehavior="none">
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/contact" />
    </group>

</menu>
