<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_sentiment_neutral_black_24dp"
        android:contentDescription="@string/sentiment_icon"/>

    <TextView
        android:id="@+id/text_view_went_wrong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oops_something_went_wrong"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_try_again"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

</LinearLayout>