<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/tmdbb" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                tools:text="6.4"
                android:text="@string/dash"
                android:gravity="center"
                android:paddingTop="4dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textStyle="italic"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/tv_releaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dash"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/produced_by"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/tv_producedBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dash"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/tv_budget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dash"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/revenue"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/tv_revenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dash"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trailers"
            android:textSize="18sp"
            android:layout_marginTop="12dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewTrailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>

            <include layout="@layout/no_result" android:id="@+id/noResult"
                android:visibility="gone"/>

        </FrameLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/similar_movies"
                android:textSize="18sp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/textViewAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:textColor="@color/movieDbPrimaryColor"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>

            <include layout="@layout/no_result" android:id="@+id/noResultSimilar"
                android:visibility="gone"/>

        </FrameLayout>




    </LinearLayout>

</android.support.v4.widget.NestedScrollView>